add 'continued' class to paragraphs to match original

--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -32,7 +32,7 @@
 						<span>The sea doth wash away all human evils.</span>
 					</p>
 				</blockquote>
-				<p>And he said too that according to Homer all the Egyptians were physicians. Plato had also formed the idea of making the acquaintance of the Magi; but he abandoned it on account of the wars in Asia.</p>
+				<p class="continued">And he said too that according to Homer all the Egyptians were physicians. Plato had also formed the idea of making the acquaintance of the Magi; but he abandoned it on account of the wars in Asia.</p>
 				<p>And when he returned to Athens, he settled in the Academy, and that is a suburban place of exercise planted like a grove, so named from an ancient hero named Hecademus, as Eupolis tells us in his <i epub:type="se:name.publication.play">Discharged Soldiers</i>.</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -41,7 +41,7 @@
 						<span>By Godlike Academus.</span>
 					</p>
 				</blockquote>
-				<p>And Timon, with reference to Plato, says:</p>
+				<p class="continued">And Timon, with reference to Plato, says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>A man did lead them on, a strong stout man,</span>
@@ -53,7 +53,7 @@
 						<span>On Hecademus’ tree, unwearied sings.</span>
 					</p>
 				</blockquote>
-				<p>For the word academy was formerly spelt with an E. Now our philosopher was a friend of Isocrates; and Praxiphanes composed an account of a conversation which took place between them, on the subject of poets, when Isocrates was staying with Plato in the country.</p>
+				<p class="continued">For the word academy was formerly spelt with an E. Now our philosopher was a friend of Isocrates; and Praxiphanes composed an account of a conversation which took place between them, on the subject of poets, when Isocrates was staying with Plato in the country.</p>
 				<p>And Aristoxenus says that he was three times engaged in military expeditions: once against Tanagra, the second time against Corinth, and the third time at Delium; and that in the battle of Delium he obtained the prize of preeminent valor. He combined the principles of the schools of Heraclitus and Pythagoras and Socrates; for he used to philosophize on those things which are the subjects of sensation, according to the system of Heraclitus; on those with which intellect is conversant, according to that of Pythagoras; and on politics according to that of Socrates.</p>
 				<p>And some people (of whom Satyrus is one) say that he sent a commission to Sicily to Dion, to buy him three books of Pythagoras from Philolaus for a hundred minae; for they say that he was in very easy circumstances, having received from Dionysius more than eighty talents, as Onetor also asserts in his treatise which is entitled, <i epub:type="se:name.publication.book">Whether a wise Man ought to acquire Gains</i>.</p>
 				<p>And he was much assisted by Epicharmus the comic poet, a great part of whose works he transcribed, as Alcimus says in his essays addressed to Amyntas, of which there are four. And in the first of them he speaks as follows: “And Plato appears to utter a great many of the sentiments of Epicharmus. Let us just examine. Plato says that that is an object of sensation, which is never stationary either as to its quality or its quantity, but which is always flowing and changing; as, for instance, if one take from any objects all number, then one cannot affirm that they are either equal, or of any particular things, or of what quality or quantity they are. And these things are of such a kind that they are always being produced, but that they never have any invariable substances.”</p>
