--- a/src/epub/text/book-6.xhtml
+++ b/src/epub/text/book-6.xhtml
@@ -43,7 +43,7 @@
 						<span>One of the Muses ’tis who has convinc’d them.</span>
 					</p>
 				</blockquote>
-				<p>He was the original cause of the apathy of Diogenes, and the temperance of Crates, and the patience of Zeno, having himself, as it were, laid the foundations of the city which they afterwards built. And Xenophon says that in his conversation and society, he was the most delightful of men, and in every respect the most temperate.</p>
+				<p class="continued">He was the original cause of the apathy of Diogenes, and the temperance of Crates, and the patience of Zeno, having himself, as it were, laid the foundations of the city which they afterwards built. And Xenophon says that in his conversation and society, he was the most delightful of men, and in every respect the most temperate.</p>
 				<p>There are ten volumes of his writings extant: The first volume is that in which there is the essay on Style, or on Figures of Speech; the <i epub:type="se:name.publication.book">Ajax</i>, or speech of Ajax; the <i epub:type="se:name.publication.book">Defense of Orestes</i> or the treatise on Lawyers; the <i epub:type="se:name.publication.book">Isographe</i>, or the <i epub:type="se:name.publication.book">Lysias and Isocrates</i>; the reply to the work of Isocrates, entitled <i epub:type="se:name.publication.book">the Absence of Witnesses</i>. The second volume is that in which we have the treatise on the Nature of Animals; on the Procreation of Children, or on Marriage, an essay of an amatory character; on the Sophists, an essay of a physiognomical character; on Justice and Manly Virtue, being three essays of an hortatory character; two treatises on Theognis. The third volume contains a treatise on the Good; on Manly Courage; on Law, or Political Constitutions; on Law, or what is Honorable and Just; on Freedom and Slavery; on Good Faith; on a Guardian, or on Persuasion; on Victory, an economical essay. The fourth volume contains the <i epub:type="se:name.publication.book">Cyrus</i>; the <i epub:type="se:name.publication.book">Greater Heracles</i>, or a treatise on Strength. The fifth volume contains the <i epub:type="se:name.publication.book">Cyrus</i>, or a treatise on Kingly Power; the <i epub:type="se:name.publication.book">Aspasia</i>.</p>
 				<p>The sixth volume is that in which there is the treatise <i epub:type="se:name.publication.book">Truth</i>; another (a disputatious one) concerning Arguing; the <i epub:type="se:name.publication.book">Sathon</i>, or on Contradiction, in three parts; and an essay on Dialect. The seventh contains a treatise on Education, or Names, in five books; one on the Use of Names, or the <i epub:type="se:name.publication.book">Contentious Man</i>; one on Questions and Answers; one on Opinion and Knowledge, in four books; one on Dying; one on Life and Death; one on those who are in the Shades below; one on Nature, in two books; two books of Questions in Natural Philosophy; one essay, called <i epub:type="se:name.publication.book">Opinions on the Contentious Man</i>; one book of Problems, on the subject of Learning. The eighth volume is that in which we find a treatise on Music; one on Interpreters; one on Homer; one on Injustice and Impiety; one on Calchas; one on a Spy; one on Pleasure. The ninth book contains an essay on the <i epub:type="se:name.publication.poem">Odyssey</i>; one on the Magic Wand; the <i epub:type="se:name.publication.book">Minerva</i>, or an essay on Telemachus; an essay on Helen and Penelope; one on <i epub:type="se:name.publication.play">Proteus</i>; the <i epub:type="se:name.publication.book">Cyclops</i>, being an essay on Ulysses; an essay on the Use of Wine, or on Drunkenness, or on the Cyclops; one on Circe; one on Amphiaraus; one on Ulysses and Penelope, and also on Ulysses’s Dog. The tenth volume is occupied by the <i epub:type="se:name.publication.book">Heracles</i>, or <i epub:type="se:name.publication.book">Medas</i>; the <i epub:type="se:name.publication.book">Hercules</i>, or an Essay on Prudence or Strength; the <i epub:type="se:name.publication.book">Lord</i> or the <i epub:type="se:name.publication.book">Lover</i>; the <i epub:type="se:name.publication.book">Lord</i> or the <i epub:type="se:name.publication.book">Spies</i>; the <i epub:type="se:name.publication.book">Menexenus</i>, or an essay on Governing; the <i epub:type="se:name.publication.book">Alcibiades</i>; the <i epub:type="se:name.publication.book">Archelaus</i>, or an essay on Kingly Power.</p>
 				<p>These then are the names of his works. And Timon, rebuking him because of their great number, called him a universal chatterer.</p>
@@ -121,7 +121,7 @@
 						<span>Through heaps of carnage to despoil the dead.”<a href="endnotes.xhtml#note-64" id="noteref-64" epub:type="noteref">64</a></span>
 					</p>
 				</blockquote>
-				<p>When he was asked whether he had any girl or boy to wait on him, he said: “No.” And as his questioner asked further: “If then you die, who will bury you?” He replied: “Whoever wants my house.” Seeing a handsome youth sleeping without any protection, he nudged him, and said: “Wake up:</p>
+				<p class="continued">When he was asked whether he had any girl or boy to wait on him, he said: “No.” And as his questioner asked further: “If then you die, who will bury you?” He replied: “Whoever wants my house.” Seeing a handsome youth sleeping without any protection, he nudged him, and said: “Wake up:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>“Mix’d with the vulgar shall thy fate be found,</span>
@@ -144,7 +144,7 @@
 						<span>Keep well aloof, O stranger, from all tyrants.<a href="endnotes.xhtml#note-67" id="noteref-67" epub:type="noteref">67</a></span>
 					</p>
 				</blockquote>
-				<p>And presently he added:</p>
+				<p class="continued">And presently he added:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>He drove the olive off (<i xml:lang="grc">μαστίξεν δ᾿ ἐλάαν</i>).<a href="endnotes.xhtml#note-68" id="noteref-68" epub:type="noteref">68</a></span>
@@ -208,7 +208,7 @@
 						<span>The wise Diogenes.</span>
 					</p>
 				</blockquote>
-				<p>Others say that he, while intending to distribute a polypus to his dogs, was bitten by them through the tendon of his foot, and so died. But his own greatest friends, as Antisthenes tells us in his <i epub:type="se:name.publication.book">Successions</i>, rather sanction the story of his having died from holding his breath. For he used to live in the Craneum, which was a Gymnasium at the gates of Corinth. And his friends came according to their custom, and found him with his head covered; and as they did not suppose that he was asleep, for he was not a man much subject to the influence of night or sleep, they drew away his cloak from his face, and found him no longer breathing; and they thought that he had done this on purpose, wishing to escape the remaining portion of his life.</p>
+				<p class="continued">Others say that he, while intending to distribute a polypus to his dogs, was bitten by them through the tendon of his foot, and so died. But his own greatest friends, as Antisthenes tells us in his <i epub:type="se:name.publication.book">Successions</i>, rather sanction the story of his having died from holding his breath. For he used to live in the Craneum, which was a Gymnasium at the gates of Corinth. And his friends came according to their custom, and found him with his head covered; and as they did not suppose that he was asleep, for he was not a man much subject to the influence of night or sleep, they drew away his cloak from his face, and found him no longer breathing; and they thought that he had done this on purpose, wishing to escape the remaining portion of his life.</p>
 				<p>On this there was a quarrel, as they say, between his friends, as to who should bury him, and they even came to blows; but when the elders and chief men of the city came there, they say that he was buried by them at the gate which leads to the Isthmus. And they placed over him a pillar, and on that a dog in Parian marble. And at a later period his fellow citizens honored him with brazen statues, and put this inscription on them:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -281,7 +281,7 @@
 						<span>Teaching that all opinion is but vanity.</span>
 					</p>
 				</blockquote>
-				<p>But he was a man of such gravity that he despised glory, and sought only for truth.</p>
+				<p class="continued">But he was a man of such gravity that he despised glory, and sought only for truth.</p>
 				<p>He wrote some jests mingled with serious treatises, and two essays on the Appetites, and an Exhortation.</p>
 			</section>
 			<section id="part-6-4">
@@ -337,13 +337,13 @@
 						<span>But all the rest is vanity.</span>
 					</p>
 				</blockquote>
-				<p>There is a line, too, which tells us that he gained from philosophy:</p>
+				<p class="continued">There is a line, too, which tells us that he gained from philosophy:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>A peck of lupins, and to care for nobody.</span>
 					</p>
 				</blockquote>
-				<p>This, too, is attributed to him:</p>
+				<p class="continued">This, too, is attributed to him:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Hunger checks love; and should it not, time does.</span>
@@ -385,7 +385,7 @@
 						<span>To Pluto’s realms, bent double by old age.</span>
 					</p>
 				</blockquote>
-				<p>For he was humpbacked from age.</p>
+				<p class="continued">For he was humpbacked from age.</p>
 				<p>When Alexander asked him whether he wished to see the restoration of his country, he said: “What would be the use of it? for perhaps some other Alexander would come at some future time and destroy it again.</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -428,7 +428,7 @@
 						<span>These are the phantoms of infernal dreams;</span>
 					</p>
 				</blockquote>
-				<p>As if he meant that they were all nonsense. But some say that it was the notes which he had taken of the lectures of Theophrastus which he burnt, quoting the following verse:</p>
+				<p class="continued">As if he meant that they were all nonsense. But some say that it was the notes which he had taken of the lectures of Theophrastus which he burnt, quoting the following verse:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Vulcan, draw near, ’tis Thetis asks your aid.<a href="endnotes.xhtml#note-77" id="noteref-77" epub:type="noteref">77</a></span>
@@ -450,7 +450,7 @@
 						<span>So near the warp?”<a href="endnotes.xhtml#note-78" id="noteref-78" epub:type="noteref">78</a></span>
 					</p>
 				</blockquote>
-				<p>“I, Theodorus, am that person,” she replied; “but do I appear to you to have come to a wrong decision, if I devote that time to philosophy, which I otherwise should have spent at the loom?” And these and many other sayings are reported of this female philosopher.</p>
+				<p class="continued">“I, Theodorus, am that person,” she replied; “but do I appear to you to have come to a wrong decision, if I devote that time to philosophy, which I otherwise should have spent at the loom?” And these and many other sayings are reported of this female philosopher.</p>
 				<p>There is also a volume of letters of Crates<a href="endnotes.xhtml#note-79" id="noteref-79" epub:type="noteref">79</a> extant, in which he philosophizes most excellently; and in style is very little inferior to Plato. He also wrote some tragedies, which are imbued with a very sublime spirit of philosophy, of which the following lines are a specimen:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
