--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -28,7 +28,7 @@
 						<span>And in your hearts lay deep these words of mine.</span>
 					</p>
 				</blockquote>
-				<p>A third about the Soul; a fourth on Piety; a fifth entitled <i epub:type="se:name.publication.poem">Helothales</i>, which was the name of the father of Epicharmus of Cos; a sixth called <i epub:type="se:name.publication.poem">Crotona</i>, and other poems too. But the mystic discourse which is extant under his name, they say is really the work of Hippasus, having been composed with a view to bring Pythagoras into disrepute. There were also many other books composed by Aston of Crotona, and attributed to Pythagoras.</p>
+				<p class="continued">A third about the Soul; a fourth on Piety; a fifth entitled <i epub:type="se:name.publication.poem">Helothales</i>, which was the name of the father of Epicharmus of Cos; a sixth called <i epub:type="se:name.publication.poem">Crotona</i>, and other poems too. But the mystic discourse which is extant under his name, they say is really the work of Hippasus, having been composed with a view to bring Pythagoras into disrepute. There were also many other books composed by Aston of Crotona, and attributed to Pythagoras.</p>
 				<p>Aristoxenus asserts that Pythagoras derived the greater part of his ethical doctrines from Themistoclea, the priestess at Delphi. And Ion, of Chios, in his <i epub:type="se:name.publication.book">Victories</i>, says that he wrote some poems and attributed them to Orpheus. They also say that the poem called the <i epub:type="se:name.publication.poem">Scopiadae</i> is by him, which begins thus:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -71,7 +71,7 @@
 						<span>What that I should have done have I omitted?</span>
 					</p>
 				</blockquote>
-				<p>And that he used to forbid them to offer victims to the Gods, ordering them to worship only at those altars which were unstained with blood. He forbade them also to swear by the Gods, saying: “That every man ought so to exercise himself, as to be worthy of belief without an oath.” He also taught men that it behooved them to honor their elders, thinking that which was precedent in point of time more honorable; just as in the world, the rising of the sun was more so than the setting; in life, the beginning more so than the end; and in animals, production more so than destruction.</p>
+				<p class="continued">And that he used to forbid them to offer victims to the Gods, ordering them to worship only at those altars which were unstained with blood. He forbade them also to swear by the Gods, saying: “That every man ought so to exercise himself, as to be worthy of belief without an oath.” He also taught men that it behooved them to honor their elders, thinking that which was precedent in point of time more honorable; just as in the world, the rising of the sun was more so than the setting; in life, the beginning more so than the end; and in animals, production more so than destruction.</p>
 				<p>Another of his rules was that men should honor the Gods above the daemons, heroes above men; and of all men parents were entitled to the highest degree of reverence. Another, that people should associate with one another in such a way as not to make their friends enemies, but to render their enemies friends. Another was that they should think nothing exclusively their own. Another was to assist the law, and to make war upon lawlessness. Not to destroy or injure a cultivated tree, nor any animal either which does not injure men. That modesty and decorum consisted in never yielding to laughter, and yet not looking stern. He taught that men should avoid too much flesh, that they should in travelling let rest and exertion alternate; that they should exercise memory; that they should never say or do anything in anger; that they should not pay respect to every kind of divination; that they should use songs set to the lyre; and by hymns to the Gods and to eminent men, display a reasonable gratitude to them.</p>
 				<p>He also forbade his disciples to eat beans, because, as they were flatulent, they greatly partook of animal properties [he also said that men kept their stomachs in better order by avoiding them]; and that such abstinence made the visions which appear in one’s sleep gentle and free from agitation. Alexander also says, in his <i epub:type="se:name.publication.book">Successions of Philosophers</i>, that he found the following dogmas also set down in the Commentaries of Pythagoras:</p>
 				<p>That the monad was the beginning of everything. From the monad proceeds an indefinite duad, which is subordinate to the monad as to its cause. That from the monad and the indefinite duad proceed numbers. And from numbers signs. And from these last, lines of which plane figures consist. And from plane figures are derived solid bodies. And from solid bodies sensible bodies, of which last there are four elements: fire, water, earth, and air. And that the world, which is endued with life, and intellect, and which is of a spherical figure, having the earth, which is also spherical, and inhabited all over in its center, results from a combination of these elements, and derives its motion from them; and also that there are antipodes,<a href="endnotes.xhtml#note-112" id="noteref-112" epub:type="noteref">112</a> and that what is below, as respects us, is above in respect of them.</p>
@@ -378,7 +378,7 @@
 						<span>Had the profoundest wealth of intellect.</span>
 					</p>
 				</blockquote>
-				<p>But some say that when the philosopher says this, he is referring to Parmenides.</p>
+				<p class="continued">But some say that when the philosopher says this, he is referring to Parmenides.</p>
 				<p>Neanthes relates that till the time of Philolaus and Empedocles, the Pythagoreans used to admit all persons indiscriminately into their school; but when Empedocles made their doctrines public by means of his poems, then they made a law to admit no Epic poet. And they say that the same thing happened to Plato; for that he too was excluded from the school. But who was the teacher of the Pythagorean school that Empedocles was a pupil of, they do not say; for, as for the letter of Telauges, in which he is stated to have been a pupil of Hippasus and Brontinus, that is not worthy of belief. But Theophrastus says that he was an imitator and a rival of Parmenides, in his poems, for that he too had delivered his opinions on natural philosophy in epic verse.</p>
 				<p>Hermippus, however, says that he was an imitator, not of Parmenides, but of Xenophanes with whom he lived; and that he imitated his epic style, and that it was at a later period that he fell in with the Pythagoreans. But Alcidamas, in his <i epub:type="se:name.publication.book">Natural Philosophy</i>, says that Zeno and Empedocles were pupils of Parmenides, about the same time; and that they subsequently seceded from him; and that Zeno adopted a philosophical system peculiar to himself; but that Empedocles became a pupil of Anaxagoras and Pythagoras, and that he imitated the pompous demeanour, and way of life, and gestures of the one, and the system of Natural Philosophy of the other.</p>
 				<p>And Aristotle, in his <i epub:type="se:name.publication.book">Sophist</i>, says that Empedocles was the first person who invented rhetoric, and Zeno the first person who invented dialectics. And in his book on Poetry, he says that Empedocles was a man of Homeric genius, and endowed with great power of language, and a great master of metaphor, and a man who employed all the successful artifices of poetry, and also that when he had written several poems, and among them one on the passage of the Hellespont by Xerxes, and also the prooemium of a hymn to Apollo; his daughter subsequently burnt them, or, as Hieronymus says, his sister, burning the prooemium unintentionally, but the Persian poem on purpose, because it was incomplete. And speaking generally, he says that he wrote tragedies and political treatises.</p>
@@ -493,7 +493,7 @@
 						<span>Now live among you:</span>
 					</p>
 				</blockquote>
-				<p>And so on.</p>
+				<p class="continued">And so on.</p>
 				<p>But when he went to the olympic games he was considered a worthy object of general attention, so that there was no mention made of anyone else in comparison of Empedocles.</p>
 				<p>Afterwards, indeed, when Agrigentum was settled, the descendants of his enemies opposed his return; on which account he retired to Peloponnesus, where he died. And Timon has not let even Empedocles escape, but satirises him in this style, saying:</p>
 				<blockquote epub:type="z3998:verse">
@@ -522,7 +522,7 @@
 						<span>And his mad soul to blackest hell descends.<a href="endnotes.xhtml#note-118" id="noteref-118" epub:type="noteref">118</a></span>
 					</p>
 				</blockquote>
-				<p>But in the letter of Telauges, which has been mentioned before, it is said that he slipped down through old age, and fell into the sea, and so died.</p>
+				<p class="continued">But in the letter of Telauges, which has been mentioned before, it is said that he slipped down through old age, and fell into the sea, and so died.</p>
 				<p>And this is enough to say about his death.</p>
 				<p>There is also a jesting epigram of ours upon him, in our collection of Poems in all Metres, which runs thus:</p>
 				<blockquote epub:type="z3998:verse">
@@ -562,7 +562,7 @@
 						<span>And Nestis, who fills mortal eyes with tears.</span>
 					</p>
 				</blockquote>
-				<p>Meaning by Jove fire, by Juno the earth, by Pluto the air, and by Nestis water. And these things, says he, never cease alternating with one another; inasmuch as this arrangement is perpetual. Accordingly, he says subsequently:</p>
+				<p class="continued">Meaning by Jove fire, by Juno the earth, by Pluto the air, and by Nestis water. And these things, says he, never cease alternating with one another; inasmuch as this arrangement is perpetual. Accordingly, he says subsequently:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Sometimes in friendship bound they coalesce,</span>
@@ -570,7 +570,7 @@
 						<span>Sometimes they’re parted by fell discord’s hate.</span>
 					</p>
 				</blockquote>
-				<p>And he asserts that the sun is a vast assemblage of fire, and that it is larger than the moon. And the moon is disk-shaped; and that the heaven itself is like crystal; and that the soul inhabits every kind of form of animals and plants. Accordingly, he thus expresses himself:</p>
+				<p class="continued">And he asserts that the sun is a vast assemblage of fire, and that it is larger than the moon. And the moon is disk-shaped; and that the heaven itself is like crystal; and that the soul inhabits every kind of form of animals and plants. Accordingly, he thus expresses himself:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>For once I was a boy, and once a girl.</span>
