--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -125,7 +125,7 @@
 						<span>Lay upon that his ruthless conquering grasp.</span>
 					</p>
 				</blockquote>
-				<p>The fourth was a Lesbian, who wrote a history of Macedonia. The fifth was a man who blended jest with earnest, and who, having been a harp-player, abandoned that profession for a seriocomic style of writing.</p>
+				<p class="continued">The fourth was a Lesbian, who wrote a history of Macedonia. The fifth was a man who blended jest with earnest, and who, having been a harp-player, abandoned that profession for a seriocomic style of writing.</p>
 			</section>
 			<section id="part-9-2">
 				<h3 epub:type="title">Xenophanes</h3>
@@ -137,7 +137,7 @@
 						<span>The wise reprover of the tricks of Homer.</span>
 					</p>
 				</blockquote>
-				<p>He, having been banished from his own country, lived at Zancle in Sicily, and at Catana.</p>
+				<p class="continued">He, having been banished from his own country, lived at Zancle in Sicily, and at Catana.</p>
 				<p>And according to the statements made by some people, he was a pupil of no one; but as others say, he was a pupil of Boton the Athenian; or as another account again affirms, of Archelaus. He was, if we may believe Sotion, a contemporary of Anaximander.</p>
 				<p>He wrote poems in hexameter and in elegiac verse; and also he wrote iambics against Hesiod and Homer, attacking the things said in their poems about the Gods. He also used to recite his own poems. It is said likewise that he argued against the opinions of Thales and Pythagoras, and that he also attacked Epimenides. He lived to an extreme old age; as he says somewhere himself:</p>
 				<blockquote epub:type="z3998:verse">
@@ -396,7 +396,7 @@
 						<span>Unlike our gross, diseas’d, terrestrial blood.”<a href="endnotes.xhtml#note-131" id="noteref-131" epub:type="noteref">131</a></span>
 					</p>
 				</blockquote>
-				<p>But Plutarch says that it was Alexander himself who quoted these lines to his friends.</p>
+				<p class="continued">But Plutarch says that it was Alexander himself who quoted these lines to his friends.</p>
 				<p>They also tell a story that Anaxarchus once drank to him, and then showed the goblet, and said:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -450,7 +450,7 @@
 						<span>Such is the fate of man.<a href="endnotes.xhtml#note-132" id="noteref-132" epub:type="noteref">132</a></span>
 					</p>
 				</blockquote>
-				<p>He used also, as it is said, to compare men to wasps and flies and birds, and to quote the following lines:</p>
+				<p class="continued">He used also, as it is said, to compare men to wasps and flies and birds, and to quote the following lines:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Die then, my friend, what boots it to deplore?</span>
@@ -462,7 +462,7 @@
 						<span>And thou, doest thou bewail mortality?<a href="endnotes.xhtml#note-133" id="noteref-133" epub:type="noteref">133</a></span>
 					</p>
 				</blockquote>
-				<p>And so he would quote anything that bore on the uncertainty and emptiness and fickleness of the affairs of man. Posidonius tells the following anecdote about him: that when some people who were sailing with him were looking gloomy because of a storm, he kept a calm countenance, and comforted their minds, exhibiting himself on deck eating a pig, and saying that it became a wise man to preserve an untroubled spirit in that manner. Numenius is the only writer who asserts that he used to deliver positive dogmas.</p>
+				<p class="continued">And so he would quote anything that bore on the uncertainty and emptiness and fickleness of the affairs of man. Posidonius tells the following anecdote about him: that when some people who were sailing with him were looking gloomy because of a storm, he kept a calm countenance, and comforted their minds, exhibiting himself on deck eating a pig, and saying that it became a wise man to preserve an untroubled spirit in that manner. Numenius is the only writer who asserts that he used to deliver positive dogmas.</p>
 				<p>He had many eminent disciples, and among them Eurylochus, of whom the following defective characteristic is related: for they say that he was once worked up to such a pitch of rage that he took up a spit with the meat on it, and chased the cook as far as the marketplace. And once in Elis he was so harassed by some people who put questions to him in the middle of his discourses, that he threw down his cloak and swam across the Alpheus. He was the greatest possible enemy to the Sophists, as Timon tells us. But Philo, on the contrary, was very fond of arguing; on which account Timon speaks of him thus:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
@@ -473,7 +473,7 @@
 						<span>The glory or disputes which harass Philo.</span>
 					</p>
 				</blockquote>
-				<p>Besides these disciples, Pyrrho also had Hecateus of Abdera, and Timon the Phliasian, who wrote the Silloi and whom we shall speak of hereafter; and also Nausiphanes of Teos, who, as some say, was the master of Epicurus.</p>
+				<p class="continued">Besides these disciples, Pyrrho also had Hecateus of Abdera, and Timon the Phliasian, who wrote the Silloi and whom we shall speak of hereafter; and also Nausiphanes of Teos, who, as some say, was the master of Epicurus.</p>
 				<p>All these men were called Pyrrhoneans from their master; and also doubters, and skeptics, and ephectics, or suspenders of their judgment, and investigators, from their principles. And their philosophy was called investigatory, from their investigating or seeking the truth on all sides; and skeptical from their being always doubting (<i xml:lang="grc">σκέπτομαι</i>), and never finding; and ephectic, from the disposition which they encouraged after investigation, I mean the suspending of their judgment (<i xml:lang="grc">ἐποχὴ</i>); and doubting, because they asserted that the dogmatic philosophers only doubted, and that they did the same. [And they were called Pyrrhoneans from Pyrrho himself.]</p>
 				<p>But Theodosius, in his <i epub:type="se:name.publication.book">Chapters on Skepticism</i>, contends that we ought not to call the Pyrrhonean school skeptical; for since, says he, the motion and agitation of the mind in each individual is incomprehensible to others, we are unable to know what was the disposition of Pyrrho; and if we do not know it we ought not to be called Pyrrhoneans. He also adds that Pyrrho was not the original inventor of Skepticism, and that he had no particular dogma of any kind; and that, consequently, it can only be called Pyrrhonism from some similarity. Some say that Homer was the original founder of this school; since he at different times gives different accounts of the same circumstance, as much as anyone else ever did; and since he never dogmatizes definitively respecting affirmation; they also say that the maxims of the seven wise men were skeptical; such as that “Seek nothing in excess,” and that “Suretyship is near calamity;” which shows that calamity follows a man who has given positive and certain surety; they also argue that Archilochus and Euripides were Skeptics; and Archilochus speaks thus:</p>
 				<blockquote epub:type="z3998:verse">
@@ -485,7 +485,7 @@
 						<span>With every day that Jupiter doth send.</span>
 					</p>
 				</blockquote>
-				<p>And Euripides says:</p>
+				<p class="continued">And Euripides says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Why then do men assert that wretched mortals</span>
@@ -497,7 +497,7 @@
 						<span>Which pleases you.</span>
 					</p>
 				</blockquote>
-				<p>Moreover, Xenophanes, and Zeno the Eleatic, and Democritus were also Skeptics; of whom Xenophanes speaks thus:</p>
+				<p class="continued">Moreover, Xenophanes, and Zeno the Eleatic, and Democritus were also Skeptics; of whom Xenophanes speaks thus:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>And no man knows distinctly anything,</span>
@@ -505,7 +505,7 @@
 						<span>And no man ever will.</span>
 					</p>
 				</blockquote>
-				<p>And Zeno endeavors to put an end to the doctrine of motion by saying: “The object moved does not move either in the place in which it is, or in that in which it is not.” Democritus, too, discards the qualities, where he says: what is cold is cold in opinion, and what is hot is hot in opinion; but atoms and the vacuum exist in reality. And again he says: “But we know nothing really; for truth lies in the bottom.” Plato, too, following them, attributes the knowledge of the truth to the Gods and to the sons of the Gods, and leaves men only the investigation of probability. And Euripides says:</p>
+				<p class="continued">And Zeno endeavors to put an end to the doctrine of motion by saying: “The object moved does not move either in the place in which it is, or in that in which it is not.” Democritus, too, discards the qualities, where he says: what is cold is cold in opinion, and what is hot is hot in opinion; but atoms and the vacuum exist in reality. And again he says: “But we know nothing really; for truth lies in the bottom.” Plato, too, following them, attributes the knowledge of the truth to the Gods and to the sons of the Gods, and leaves men only the investigation of probability. And Euripides says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
 						<span>Who now can tell whether to live may not</span>
@@ -555,7 +555,7 @@
 						<span>For every man has equal strength to rail:<a href="endnotes.xhtml#note-134" id="noteref-134" epub:type="noteref">134</a></span>
 					</p>
 				</blockquote>
-				<p>Intimating the equal vigour and antithetical force of words. And the Skeptics persevered in overthrowing all the dogmas of every sect, while they themselves asserted nothing dogmatically; and contented themselves with expressing the opinions of others, without affirming anything themselves, not even that they did affirm nothing; so that they even discarded all positive denial, for to say “We affirm nothing” was to affirm something. “But we,” said they, “enunciate the doctrines of others, to prove our own perfect indifference; it is just as if we were to express the same thing by a simple sign.” So these words⁠—“We affirm nothing”⁠—indicate the absence of all affirmation, just as other propositions, such as: “Not more one thing than another” or “Every reason has a corresponding reason opposed to it,” and all such maxims indicate a similar idea. But the phrase “Not more one thing,” <abbr>etc.</abbr>, has sometimes an affirmative sense, indicating the equality of certain things, as for instance in this sentence: “A pirate is not worse than a liar.” But by the skeptics this is said not positively, but negatively, as for instance where the speaker contests a point and says: “It was not Scylla, any more than it was Chimaera.” And the word “more” itself is sometimes used to indicate a comparison, as when we say: “That honey is more sweet than grapes.” And at other times it is used positively, and at the same time negatively, as when we say: “Virtue profits us more than hurts us;” for in this phrase we intimate that virtue does profit, and does not hurt us. But the Skeptics abolish the whole expression “Not more than it;” saying, that “Prudence has not existence, any more than it has no existence.” Accordingly, then, expression, as Timon says in his <i epub:type="se:name.publication.book">Python</i>, indicates nothing more than an absence of all affirmation, or of all assent of the judgment.</p>
+				<p class="continued">Intimating the equal vigour and antithetical force of words. And the Skeptics persevered in overthrowing all the dogmas of every sect, while they themselves asserted nothing dogmatically; and contented themselves with expressing the opinions of others, without affirming anything themselves, not even that they did affirm nothing; so that they even discarded all positive denial, for to say “We affirm nothing” was to affirm something. “But we,” said they, “enunciate the doctrines of others, to prove our own perfect indifference; it is just as if we were to express the same thing by a simple sign.” So these words⁠—“We affirm nothing”⁠—indicate the absence of all affirmation, just as other propositions, such as: “Not more one thing than another” or “Every reason has a corresponding reason opposed to it,” and all such maxims indicate a similar idea. But the phrase “Not more one thing,” <abbr>etc.</abbr>, has sometimes an affirmative sense, indicating the equality of certain things, as for instance in this sentence: “A pirate is not worse than a liar.” But by the skeptics this is said not positively, but negatively, as for instance where the speaker contests a point and says: “It was not Scylla, any more than it was Chimaera.” And the word “more” itself is sometimes used to indicate a comparison, as when we say: “That honey is more sweet than grapes.” And at other times it is used positively, and at the same time negatively, as when we say: “Virtue profits us more than hurts us;” for in this phrase we intimate that virtue does profit, and does not hurt us. But the Skeptics abolish the whole expression “Not more than it;” saying, that “Prudence has not existence, any more than it has no existence.” Accordingly, then, expression, as Timon says in his <i epub:type="se:name.publication.book">Python</i>, indicates nothing more than an absence of all affirmation, or of all assent of the judgment.</p>
 				<p>Also the expression “Every reason has a corresponding reason,” <abbr>etc.</abbr>, does in the same manner indicate the suspension of the judgment; for if, while the facts are different, the expressions are equipollent, it follows that a man must be quite ignorant of the real truth.</p>
 				<p>Besides this, to this assertion there is a contrary assertion opposed, which, after having destroyed all others, turns itself against itself, and destroys itself, resembling, as it were, those cathartic medicines which, after they have cleansed the stomach, then discharge themselves and are got rid of. And so the dogmatic philosophers say that all these reasonings are so far from overturning the authority of reason that they confirm it. To this the Skeptics reply that they only employ reason as an instrument, because it is impossible to overturn the authority of reason without employing reason; just as if we assert that there is no such thing as space, we must employ the word “space,” but that not dogmatically, but demonstratively; and if we assert that nothing exists according to necessity, it is unavoidable that we must use the word “necessity.” The same principle of interpretation did they adopt, for they affirmed that facts are not by nature such as they appear to be, but that they only seem such; and they said that what they doubt is not what they think, for their thoughts are evident to themselves, but the reality of the things which are only made known to them by their sensations.</p>
 				<p>The Pyrrhonean system, then, is a simple explanation of appearances, or of notions of every kind, by means of which, comparing one thing with another, one arrives at the conclusion that there is nothing in all these notions but contradiction and confusion; as Aenesidemus says in his <i epub:type="se:name.publication.book">Introduction to Pyrrhonism</i>. As to the contradictions which are found in those speculations, when they have pointed out in what way each fact is convincing, they then, by the same means, take away all belief from it; for they say that we regard as certain those things which always produce similar impressions on the senses, those which are the offspring of habit, or which are established by the laws, and those too which give pleasure or excite wonder. And they prove that the reasons opposite to those on which our assent is founded are entitled to equal belief.</p>
@@ -603,7 +603,7 @@
 						<span>Wherever it may be.</span>
 					</p>
 				</blockquote>
-				<p>And in his treatise on the Senses, he says, “The reason why a thing is sweet I do not declare, but I confess that the fact of sweetness is evident.” So too, Aenesidemus, in the first book of his <i epub:type="se:name.publication.book">Pyrrhonean Discourses</i>, says that Pyrrho defines nothing dogmatically, on account of the possibility of contradiction, but that he is guided by what is evident. And he says the same thing in his book against Wisdom, and in his treatise on Investigation.</p>
+				<p class="continued">And in his treatise on the Senses, he says, “The reason why a thing is sweet I do not declare, but I confess that the fact of sweetness is evident.” So too, Aenesidemus, in the first book of his <i epub:type="se:name.publication.book">Pyrrhonean Discourses</i>, says that Pyrrho defines nothing dogmatically, on account of the possibility of contradiction, but that he is guided by what is evident. And he says the same thing in his book against Wisdom, and in his treatise on Investigation.</p>
 				<p>In like manner, Zeuxis, a friend of Aenesidemus, in his treatise on Twofold Arguments, and Antiochus, of Laodicea, and Apellas, in his Agrippa, all declare nothing beyond what is evident. The criterion therefore, among the Skeptics, is that which is evident; as Aenesidemus also says; and Epicurus says the same thing.</p>
 				<p>But Democritus says that there is no test whatever of appearances, and also that they are not criteria of truth. Moreover, the dogmatic philosophers attack the criterion derived from appearances, and say that the same objects present at times different appearances; so that a town presents at one time a square, and at another a round appearance; and that consequently, if the Skeptic does not discriminate between different appearances, he does nothing at all. If, on the contrary, he determines in favor of either, then, say they, he no longer attaches equal value to all appearances. The Skeptics reply to this, that in the presence of different appearances, they content themselves with saying that there are many appearances, and that it is precisely because things present themselves under different characters that they affirm the existence of appearances.</p>
 				<p>Lastly, the Skeptics say that the chief good is the suspension of the judgment, which tranquillity of mind follows, like its shadow, as Timon and Aenesidemus say; for that we need not choose these things, or avoid those, which all depend on ourselves: but as to those things which do not depend upon us, but upon necessity, such as hunger, thirst, and pain, those we cannot avoid; for it is not possible to put an end to them by reason.</p>
