Add word joiners before and after hair spaces that precede horizontal ellipses

--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -628,7 +628,7 @@
 			<section id="part-8-5">
 				<h3 epub:type="title">Alcmaeon</h3>
 				<p>Alcmaeon was a citizen of Crotona; he also was a pupil of Pythagoras. And the chief part of his writings are on medical subjects; but he also at times discusses points of natural philosophy, and asserts that the greater part of human affairs have two sides. He appears to have been the first person who wrote a treatise on Natural Philosophy, as Phavorinus affirms, in his <i epub:type="se:name.publication.book">Universal History</i>; and he used to argue that the moon had the same nature forever which she had at that moment.</p>
-				<p>He was the son of Pirithus, as he himself states at the beginning of his treatise, where he says, “Alcmaeon of Crotona, the son of Pirithus, says this to Brontinus, and Leon, and Bathyllus. About things invisible, and things mortal, the Gods alone have a certain knowledge; but men may form conjectures. …” And so on.</p>
+				<p>He was the son of Pirithus, as he himself states at the beginning of his treatise, where he says, “Alcmaeon of Crotona, the son of Pirithus, says this to Brontinus, and Leon, and Bathyllus. About things invisible, and things mortal, the Gods alone have a certain knowledge; but men may form conjectures.⁠ ⁠…” And so on.</p>
 				<p>He used also to say that the soul was immortal, and that it was in a state of perpetual motion in the same way as the sun.</p>
 			</section>
 			<section id="part-8-6">
