--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -201,7 +201,7 @@
 				<p>And again, in the same play he says:</p>
 				<blockquote epub:type="z3998:verse">
 					<p>
-						<span id="i2">They eat</span>
+						<span class="i2">They eat</span>
 						<br/>
 						<span>Nothing but herbs and vegetables, and drink</span>
 						<br/>
