--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -498,7 +498,7 @@
 					<p>Taken from the <i epub:type="se:name.publication.play">Orestes</i> of Euripides, <span epub:type="z3998:roman">i</span> 140. <a href="book-7.xhtml#noteref-99" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-100" epub:type="endnote">
-					<p>This is parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">iv</span>. 611. Pope’s version, <span epub:type="roman">l</span> 831. <a href="book-7.xhtml#noteref-100" epub:type="backlink">↩</a></p>
+					<p>This is parodied from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">iv</span>. 611. Pope’s version, <span epub:type="z3998:roman">l</span> 831. <a href="book-7.xhtml#noteref-100" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-101" epub:type="endnote">
 					<p>This is referring to the Stoic doctrine ridiculed by Horace:</p>
