--- a/src/epub/text/book-10.xhtml
+++ b/src/epub/text/book-10.xhtml
@@ -189,7 +189,7 @@
 				<p>About the heavenly bodies he writes thus:</p>
 				<blockquote epub:type="z3998:letter">
 					<header>
-						<p epub:type="salutation">Epicurus to Pythocles, Wishing He May Do Well</p>
+						<p epub:type="z3998:salutation">Epicurus to Pythocles, Wishing He May Do Well</p>
 					</header>
 					<p>Cleon has brought me your letter, in which you continue to evince towards me an affection worthy of the friendship which I have for you. You devote all your care, you tell me, to engraving in your memory those ideas which contribute to the happiness of life; and you entreat me at the same time to send you a simple abridgment and abstract of my ideas on the heavenly phenomena, in order that you may without difficulty preserve the recollection of them. For, say you, what I have written on this subject in my other works is difficult to recollect, even with continual study.</p>
 					<p>I willingly yield to your desire, and I have good hope that in fulfilling what you ask, I shall be useful too to many others, especially to those who are as yet novices in the real knowledge of nature, and to those to whom the perplexities and the ordinary affairs of life leave but little leisure. Be careful then to seize on those precepts thoroughly, engrave them deeply in your memory, and meditate on them with the abridgment addressed to Herodotus, which I also send you.</p>
