--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -145,7 +145,7 @@
 					<p>The quibble here is that <i xml:lang="grc">θεὸς</i> is properly only masculine, though it is sometimes used as feminine. <a href="book-2.xhtml#noteref-29" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-30" epub:type="endnote">
-					<p>The Greek is a parody on the descriptions of Tantalus and Sisyphus. Homer, <i epub:type="se:name.publication.book">Odyssey</i> <span epub:type="z3998:roman">ii</span>, 581, 592. See also, Dryden’s Version, B <span epub:type="z3998:roman">ii</span>, 719. <a href="book-2.xhtml#noteref-30" epub:type="backlink">↩</a></p>
+					<p>The Greek is a parody on the descriptions of Tantalus and Sisyphus. Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">ii</span>, 581, 592. See also, Dryden’s Version, B <span epub:type="z3998:roman">ii</span>, 719. <a href="book-2.xhtml#noteref-30" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-31" epub:type="endnote">
 					<p>The Greek is <i xml:lang="grc">τοῦ μιμογράφου</i>. “A <em>mime</em> was a kind of prose drama, intended as a familiar representation of life and character, without any distinct plot. It was divided into <i xml:lang="grc">μῖμιοι ἀνδρεῖοι</i> and <i xml:lang="grc">γυναικεῖοι</i>, also into <i xml:lang="grc">μῖμοι σπουδαίων</i> and <i xml:lang="grc">γελοίων</i>.” <cite>—⁠Liddle and Scott in <abbr>voc.</abbr> <i xml:lang="grc">μῖμος</i></cite> <a href="book-3.xhtml#noteref-31" epub:type="backlink">↩</a></p>
@@ -723,16 +723,16 @@
 					</p>
 				</li>
 				<li id="note-131" epub:type="endnote">
-					<p>Homer, <i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">v</span>, 340. Pope’s version, 422. <a href="book-9.xhtml#noteref-131" epub:type="backlink">↩</a></p>
+					<p>Homer, <i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span>, 340. Pope’s version, 422. <a href="book-9.xhtml#noteref-131" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-132" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">vi</span>, 146. <a href="book-9.xhtml#noteref-132" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">vi</span>, 146. <a href="book-9.xhtml#noteref-132" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-133" epub:type="endnote">
-					<p><i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">xxi</span>, 106. Pope’s version, 115. <a href="book-9.xhtml#noteref-133" epub:type="backlink">↩</a></p>
+					<p><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">xxi</span>, 106. Pope’s version, 115. <a href="book-9.xhtml#noteref-133" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-134" epub:type="endnote">
-					<p>Homer, <i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">xx</span>, 248. Pope’s version, 294. <a href="book-9.xhtml#noteref-134" epub:type="backlink">↩</a></p>
+					<p>Homer, <i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">xx</span>, 248. Pope’s version, 294. <a href="book-9.xhtml#noteref-134" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-135" epub:type="endnote">
 					<p>There is too remarkable a similarity in this to Campbell’s lines:</p>
