Update colophon to new template

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -16,8 +16,8 @@
 			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.<br/>
 			It was translated from Greek in 1853 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge"><abbr class="name">C. D.</abbr> Yonge</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://sniggle.net/TPL/">David <abbr class="name">M.</abbr> Gross</a>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
