--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -116,13 +116,13 @@
 						<tbody>
 							<tr>
 								<td epub:type="z3998:persona">
-									<abbr class="name">A.</abbr>
+									<abbr epub:type="z3998:given-name">A.</abbr>
 								</td>
 								<td>Are you so proud, giving yourself such airs?</td>
 							</tr>
 							<tr>
 								<td epub:type="z3998:persona">
-									<abbr class="name">B.</abbr>
+									<abbr epub:type="z3998:given-name">B.</abbr>
 								</td>
 								<td>And well I may, for Socrates is the cause.</td>
 							</tr>
