--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,13 +15,13 @@
 			was written in the third century <abbr class="era">AD</abbr> by<br/>
 			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.<br/>
 			It was translated from Greek in 1853 by<br/>
-			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge"><abbr class="name">C. D.</abbr> Yonge</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge"><abbr epub:type="z3998:given-name">C. D.</abbr> Yonge</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://sniggle.net/TPL/">David <abbr class="name">M.</abbr> Gross</a>,<br/>
+			<a href="https://sniggle.net/TPL/">David <abbr epub:type="z3998:given-name">M.</abbr> Gross</a>,<br/>
 			and is based on a transcription produced in 2018 by<br/>
-			<b class="name">Ted Garvin</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
