--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">The Lives and Opinions of Eminent Philosophers</i><br/>
-			was written in the third century <abbr class="era">AD</abbr> by<br/>
+			was written in the third century <abbr epub:type="se:era">AD</abbr> by<br/>
 			<a href="https://en.wikipedia.org/wiki/Diogenes_La%C3%ABrtius">Diogenes Laërtius</a>.<br/>
 			It was translated from Greek in 1853 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Charles_Duke_Yonge"><abbr epub:type="z3998:given-name">C. D.</abbr> Yonge</a>.</p>
