--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -24,7 +24,7 @@
 			<b epub:type="z3998:personal-name">Ted Garvin</b> and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/57342">Project Gutenberg</a><br/>
-			and on digital scans available at<br/>
+			and on digital scans from<br/>
 			<a href="https://books.google.com/books?id=1sEIAAAAQAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Saint Jerome</i>,<br/>
