Update language semantics

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -190,14 +190,14 @@
 				</li>
 				<li id="note-42" epub:type="endnote">
 					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are:</p>
-					<blockquote epub:type="z3998:verse" xml:lang="grc">
-						<p>
+					<blockquote epub:type="z3998:verse">
+						<p xml:lang="grc">
 							<span>Ὦ μάκαρ Ατρεΐδη, μοιρηγενὲς, ὀλβιοδαίμων</span>
 						</p>
 						<cite>—⁠<i epub:type="se:name.publication.poem">Iliad</i> 3, 182.</cite>
 					</blockquote>
-					<blockquote epub:type="z3998:verse" xml:lang="grc">
-						<p>
+					<blockquote epub:type="z3998:verse">
+						<p xml:lang="grc">
 							<span>ἠέ συ Πηλεΐδη, πάντων ἐκπαγλότατ᾿ ἀνδρῶν</span>
 						</p>
 						<cite>—⁠<i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
@@ -384,8 +384,8 @@
 						</p>
 					</blockquote>
 					<p>The lines in Hesiod are:</p>
-					<blockquote epub:type="z3998:verse" xml:lang="grc">
-						<p>
+					<blockquote epub:type="z3998:verse">
+						<p xml:lang="grc">
 							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span>
 							<br/>
 							<span>Ἐσθλὸς δ᾿ αὖ κἀκεῖνος ὃς εὖ εἰπόντι πίθηται.</span>
@@ -536,9 +536,9 @@
 				</li>
 				<li id="note-104" epub:type="endnote">
 					<p>This is a quotation from Homer, <i epub:type="se:name.publication.poem">Odyssey</i> <span epub:type="z3998:roman">x</span>. 495. Pope’s Version, 586. The Greek here is <i xml:lang="grc">οἷος πέπνυται</i>. The line in Homer stands:</p>
-					<blockquote epub:type="z3998:verse" xml:lang="grc">
+					<blockquote epub:type="z3998:verse">
 						<p>
-							<span>οἵῳ πέπνυσθαι⁠—sc: πόρε περσεφόνεια.</span>
+							<span><i xml:lang="grc">οἵῳ πέπνυσθαι</i>⁠—sc: <i xml:lang="grc">πόρε περσεφόνεια.</i></span>
 						</p>
 					</blockquote>
 					<p>
